layout for about-us section + pictures

--- a/index.html
+++ b/index.html
@@ -57,28 +57,60 @@
 	 	<div class="container main-text-content">
 
 			<h1>Самые уютные курсы рисования в Минске. Добро пожаловать в студию "Акварель".</h1>
-			<p>  Что такое <strong>"Хорошие курсы по рисунку"?</strong> Главное - атмосфера и системность знаний, и соответстенный результат (тут по-подробнее)</p>
-			<p>В пяти минутах хотьбы от станции метро спортивная, в окруженнии шикарной зелени, укрывающей нас от городского шума и суеты, по адресу Матусевича 23, расположилась наша художественная школа.</p>
-			<p> <img class="studia" src="images/anatomy.jpg" alt="студия Акварель"> Здесь, (под руководством опытных преподавателей,) Вы сможете не только разово написать желаемую картину, но и пройти полный курс обучения по таким классическим дисциплинам, как академический рисунок, живопись, скульптура, что станет прочным фундаментом для дальнейшего раскрытия Вашего творческого потенциала.</p>
-			<p>Для абитуриентов у нас предусмотрены специальные программы подготовки к поступлению в ССУЗы и ВУЗы. Также мы регулярно проводим различные мастер-классы и выезжаем дружным и веселым коллективом на пленеры.</p>
-			<p>Традиционно, мы предлагаем посетить первый урок рисования в Минске бесплатно. Звоните, приходите, Вам понравится!</p>
 
-			<h3>Курсы академического рисунка в Минске.</h2>
-			<p> Классический академический рисунок - это не только базовый навык любого художника и иллюстратора, но и дисциплина по которой нужно сдавать экзамен для поступления в художественное учебное заведение. Наши опытные преподаватели помогут не только подготовится к вступительным экзаменам, но и откроют тайны света и тени, формы и перспективы в самой понятной илегкоусвояемой форме. Академический рисунок в Минске - доступен и прекрасен, если это школа рисунка "Акварель"</p>
+			<div class="main-block-1">
+				<p>Что такое <strong>"Хорошие курсы по рисунку"?</strong> Главное здесь - это соответветсвующая атмосфера, системность знаний, регулярный творческий процесс, толковый наставник, и, как результат, постоянно растущий художественный уровень учащегося.</p>
+				<p>В пяти минутах хотьбы от станции метро спортивная, в окруженнии шикарной зелени, укрывающей нас от городского шума и суеты, по адресу Матусевича 23, расположилась наша художественная школа.</p>
+				<p>Здесь Вы сможете не только разово написать желаемую картину, но и пройти полный курс обучения по таким классическим дисциплинам, как академический рисунок, живопись, скульптура, что станет прочным фундаментом для дальнейшего раскрытия Вашего творческого потенциала.</p>
+				<p>Для абитуриентов у нас предусмотрены специальные программы подготовки к поступлению в ССУЗы и ВУЗы. Также мы регулярно проводим различные мастер-классы и выезжаем дружным и веселым коллективом на пленеры.</p>
+				<p>Традиционно, мы предлагаем посетить первый урок рисования бесплатно. Звоните, приходите, Вам понравится!</p>
+			</div>
 
-			<h3>Курсы живописи.</h2>
-			<p> <img class="jivo" src="images/anatomy.jpg" alt="студия Акварель"> Если вы хотите постичь тайны живописи, научиться работать с цветом, видеть как художник, то курсы живописи в Минске на базе художественной школы "Акварель" - лучший выбор, приходите и убедитесь сами. Первое занятие бесплатно. </p>
-			<p>Внимание! Живопись вызывает зависимость, кисти, краски и запах скипидара - романтика для сильных духом).</p>
+			<div class="main-img-1">
+				<img src="images/main-parking.jpg" alt="Курсы рисования в Минске, студия Акварель">
+			</div>
 
-			<h3>Курсы скульптуры.</h2>
-			<p>Классическая программа скульптуры теперь доступна всем не только в рамках специальных учебных заведений, но и у нас, в студии "Акварель". Обязательно для всех резчиков, 3d-модельеров, ювелиров и просто неравнодущных к этому прекраснейшему виду искусств.</p>
+			<div class="main-img-2">
+				<img src="images/main-birds.jpg" alt="Птичкина студии Акварель">
+			</div>
+			
+			<div class="main-block-2">
+				<h3>Курсы академического рисунка в Минске.</h2>
+				<p> Классический академический рисунок - это не только базовый навык любого художника и иллюстратора, но и дисциплина по которой нужно сдавать экзамен для поступления в художественное учебное заведение. Наши опытные преподаватели помогут не только подготовится к вступительным экзаменам, но и откроют тайны света и тени, формы и перспективы в самой понятной илегкоусвояемой форме. Академический рисунок в Минске - доступен и прекрасен, если это школа рисунка "Акварель"</p>
 
-			<h3>Курсы рисования в Минске для начинающих.</h2>
-			<p>Вы хотите научиться рисовать, но не знаете с чего начать? Или, может быть, не знаете, что для этого надо? Или другой вопрос из сотни возможных вопросов? Не беда! Даже самый известный и профессиональный художник когда-то стоял в самом начале пути, все когда-то с чего-то начинали. </p>
-			<p>Курсы рисования для начинающих в минской художественной школе "Акварель" - лучшее место в городе, для того чтобы попробовать себя в рисунке (бесплатно), выбрать направление и начать. Ведь для того, чтобы научиться рисовать - нужно рисовать!)</p>
+				<h3>Курсы живописи.</h2>
+				<p>Если вы хотите постичь тайны живописи, научиться работать с цветом, видеть как художник, то курсы живописи в Минске на базе художественной школы "Акварель" - лучший выбор, приходите и убедитесь сами. Первое занятие бесплатно. </p>
+				<p>Внимание! Живопись вызывает зависимость, кисти, краски и запах скипидара - романтика для сильных духом).</p>
 
-			<h3>Курсы рисования в Минске для взрослых.</h2>
-			<p>Если Вы с ностальгией вспоминаете уроки ИЗО в школе, если время от времени вас одолевают приступы желания изобразить что-нибудь, но тут Вы вспоминаете, что не успели в свое время научиться рисовать как могли бы, то у нас для Вас есть прекрасная новости - рисунку все возрасты покорны, рисовать никогда не поздно! Подтверждение этого - успехи наших учеников на курсах рисования для взрослых у нас в студии "Акварель". Кто-то рисует, чтобы отвлечься от повседневности, кто-то находит радость в прогрессе и готовых работах, но главное, что всех объеденяет - это удовольствие от творческой самореализации в уютной атмосфере школы рисования "Акварель".</p>
+				<h3>Курсы скульптуры.</h2>
+				<p>Классическая программа скульптуры теперь доступна всем не только в рамках специальных учебных заведений, но и у нас, в студии "Акварель". Обязательно для всех резчиков, 3d-модельеров, ювелиров и просто неравнодущных к этому прекраснейшему виду искусств.</p>
+			</div>
+
+
+			<div class="main-block-3">
+				<h3>Курсы рисования в Минске для начинающих.</h2>
+				<p>Вы хотите научиться рисовать, но не знаете с чего начать? Или, может быть, не знаете, что для этого надо? Или другой вопрос из сотни возможных вопросов? Не беда! Даже самый известный и профессиональный художник когда-то стоял в самом начале пути, все когда-то с чего-то начинали. </p>
+				<p>Курсы рисования для начинающих в минской художественной школе "Акварель" - лучшее место в городе, для того чтобы попробовать себя в рисунке (бесплатно), выбрать направление и начать. Ведь для того, чтобы научиться рисовать - нужно рисовать!)</p>
+
+				<h3>Курсы рисования в Минске для взрослых.</h2>
+				<p>Если Вы с ностальгией вспоминаете уроки ИЗО в школе, если время от времени вас одолевают приступы желания изобразить что-нибудь, но тут Вы вспоминаете, что не успели в свое время научиться рисовать как могли бы, то у нас для Вас есть прекрасная новости - рисунку все возрасты покорны, рисовать никогда не поздно! Подтверждение этого - успехи наших учеников на курсах рисования для взрослых у нас в студии "Акварель". Кто-то рисует, чтобы отвлечься от повседневности, кто-то находит радость в прогрессе и готовых работах, но главное, что всех объеденяет - это удовольствие от творческой самореализации в уютной атмосфере школы рисования "Акварель".</p>
+			</div>
+
+
+			<div class="main-block-4">
+				<h3>Наши перимущества:</h3>
+				<ul>
+					<li>Очень уютная творческая обстановка, чему способствует уединенное расположение и интерьер.</li>
+					<li>Удобно добираться (5 мин) от стануции метро "Спортивная".</li>
+					<li>Доступность. Стоимость занятий - 5 рублей за академический час.</li>
+					<li>Индивидуальный подход (Начать можно в любое время, без оглядки на остальных).</li>
+					<li>Мы распологаем шикарной подборкой учебной литературы.</li>
+					<li>Чай, кофе, печеньки.</li>
+					<li>Регулярные матер-классы и выезды на пленеры.</li>
+					<li>Всегда свободные места на парковке под окнами студии.</li>
+				</ul>
+			</div>
+
 
 		</div>
 		<canvas id="canvas-basic"></canvas>
@@ -273,31 +305,72 @@
 	 	</div>
 	</section>
 
-	<section class="find-us">
+	<section class="teachers">
+		<div class="natasha">
+			Образование: МГХУ им. А.К.Глебова, Белорусский Государстаенный Университет Культуры и Искусств.
+			Скульптор, художник, преподавательский опыт 6 лет.
+			Опыт преподавания - : 6 лет (Рисунок, скульптура, анатомия)
+		</div>
+		<div class="nastya">
+			Образование: МГХУ им. А.К.Глебова, Белорусский Государстаенный Университет Культуры и Искусств.
+			Дизайнер, флорист, художник. 
+			Опыт преподавания - 4 года.(Академическая живопись, академический рисунок)
+		</div>
+		<div class="yana">
+			Образование: МГХУ им. А.К.Глебова, Белорусский Государственный педагогический университет.
+			Хужожник - иллюстратор.
+			Опыт преподавания - 2 года (Живопись, анатомия, цветоведение, иллюстрация).
 
-
-
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/uS4eDDe3pVg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/LvX8KUD-3BQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-
-		<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A9c354da8ca4ab1b64cc9cbfc1cff337a1888f34b3e7934d41845cdf963edbabf&amp;source=constructor" width="100%" height="3p[;[/40" frameborder="0"></iframe>
-
-<!-- GOOGLE MAP -->
-<!-- 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2350.015277365151!2d27.475572859221096!3d53.91370442797141!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbc539ff97d167%3A0x18a4e25a6c4ce367!2z0YPQu9C40YbQsCDQnNCw0YLRg9GB0LXQstC40YfQsCAyMywg0JzQuNC90YHQug!5e0!3m2!1sru!2sby!4v1532163852443" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe> -->
-	
+		</div>
 	</section>
 
+	<section class="find-us" id="particles-js">
+		<div class="container">
+			<h2>Как добраться.</h2>
+			<p>Студия "Акварель" находится по адресу г.Минск, ул. Матусевича 23, в здании бывшего детского сада, 2 этаж, аудитория 208</p>
+			<div class="ways-to-studio">
+				<div class="way">
+					<h4>Дорога в студию от перекрёстка Матусевича - Глебки (за 1 минуту)</h4>
+					<iframe width="320" height="180" src="https://www.youtube.com/embed/uS4eDDe3pVg" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				</div>
+				<div class="way">
+					<h4>Дорога в студию от станции метро СПОРТИВНАЯ (за 1,5 минуты)</h4>
+					<iframe width="320" height="180" src="https://www.youtube.com/embed/LvX8KUD-3BQ" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+				</div>
+			</div>
+		</div>
+		<div class="for-map">
+			<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A9c354da8ca4ab1b64cc9cbfc1cff337a1888f34b3e7934d41845cdf963edbabf&amp;source=constructor" width="100%" height="250px" frameborder="0"></iframe>
+		</div>
+		
+<!-- GOOGLE MAP -->
+<!-- 		<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2350.015277365151!2d27.475572859221096!3d53.91370442797141!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46dbc539ff97d167%3A0x18a4e25a6c4ce367!2z0YPQu9C40YbQsCDQnNCw0YLRg9GB0LXQstC40YfQsCAyMywg0JzQuNC90YHQug!5e0!3m2!1sru!2sby!4v1532163852443" width="100%" height="250" frameborder="0" style="border:0" allowfullscreen></iframe> -->
+	</section>
+
+	<!-- <div id="particles-js"></div> -->
 
 
 
+
+    <script src="js/jquery.min.js"></script>
+    <script src="js/ScrollMagic.min.js"></script>
+    <script src="js/debug.addIndicators.min.js"></script>
+	<script src="js/TweenMax.min.js"></script>
+	<script src="js/CSSRulePlugin.min.js"></script>
+	<script src="js/animation.gsap.js"></script>
+	<script src="js/granim.min.js"></script>
+	<script src="js/particles.min.js"></script>
+	
+<!-- 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.18.2/TweenMax.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.1/plugins/CSSRulePlugin.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.js"></script>
-	<script src="https://cdn.rawgit.com/sarcadass/granim.js/master/dist/granim.min.js"></script>
+	<script src="https://cdn.rawgit.com/sarcadass/granim.js/master/dist/granim.min.js"></script> -->
+
+	
 
 
     <script src="js/main.js"></script>
