mobile version part 1

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 			<div class="main-block-1">
 				<p>Что такое <strong>"Хорошие курсы по рисунку"?</strong> Главное здесь - это соответветсвующая атмосфера, системность знаний, регулярный творческий процесс, толковый наставник, и, как результат, постоянно растущий художественный уровень учащегося.</p>
-				<p>В пяти минутах хотьбы от станции метро спортивная, в окруженнии шикарной зелени, укрывающей нас от городского шума и суеты, по адресу Матусевича 23, расположилась наша художественная школа.</p>
+				<p>В пяти минутах хотьбы от станции метро спортивная, в окруженнии шикарной зелени, укрывающей от городского шума и суеты, по адресу Матусевича 23, расположилась наша художественная школа.</p>
 				<p>Здесь Вы сможете не только разово написать желаемую картину, но и пройти полный курс обучения по таким классическим дисциплинам, как академический рисунок, живопись, скульптура, что станет прочным фундаментом для дальнейшего раскрытия Вашего творческого потенциала.</p>
 				<p>Для абитуриентов у нас предусмотрены специальные программы подготовки к поступлению в ССУЗы и ВУЗы. Также мы регулярно проводим различные мастер-классы и выезжаем дружным и веселым коллективом на пленеры.</p>
 				<p>Традиционно, мы предлагаем посетить первый урок рисования бесплатно. Звоните, приходите, Вам понравится!</p>
