mobile version - 2 more sections refactored

--- a/index.html
+++ b/index.html
@@ -330,7 +330,9 @@
 	</section>
 
 	<section class="teachers">
-		<div class="balls"></div>
+		<div class="balls-wrapper">	
+			<div class="balls"></div>
+		</div>
 			<div class="container">
 			<h2>Наши преподаватели.</h2>
 			<div class="teacher-photo photo-down">
@@ -339,35 +341,32 @@
 			<div class="teacher-photo photo-up">
 				<img src="images/girls-up-1.png" alt="">
 			</div>
-				<div class="description">
-					<div class="natasha teacher">
-						<div class="name">Наташа</div>
-						<div class="about-teacher">
-							Образование: МГХУ им. А.К.Глебова, Белорусский Государстаенный Университет Культуры и Искусств.<br>
-							Скульптор, художник.<br>
-							Опыт преподавания - : 6 лет. (Рисунок, скульптура, анатомия)
-						</div>
-						
-					</div>
-					<div class="nastya teacher">
-						<div class="name">Настя</div>
-						<div class="about-teacher">
-							Образование: МГХУ им. А.К.Глебова, Белорусский Государстаенный Университет Культуры и Искусств.<br>
-							Дизайнер, флорист, художник. <br>
-							Опыт преподавания - 4 года. (Академическая живопись, академический рисунок)
-						</div>
-
-					</div>
-					<div class="yana teacher">
-						<div class="name">Яна</div>
-						<div class="about-teacher">
-							Образование: МГХУ им. А.К.Глебова, Белорусский Государственный педагогический университет.<br>
-							Хужожник - иллюстратор.<br>
-							Опыт преподавания - 2 года. (Живопись, анатомия, цветоведение, иллюстрация).
-						</div>
-						
+			<div class="description">
+				<div class="natasha teacher">
+					<div class="name">Наташа</div>
+					<div class="about-teacher">
+						Образование: МГХУ им. А.К.Глебова, Белорусский Государстаенный Университет Культуры и Искусств.<br>
+						Скульптор, художник.<br>
+						Опыт преподавания - : 6 лет. (Рисунок, скульптура, анатомия)
 					</div>
 				</div>
+				<div class="nastya teacher active">
+					<div class="name">Настя</div>
+					<div class="about-teacher">
+						Образование: МГХУ им. А.К.Глебова, Белорусский Государстаенный Университет Культуры и Искусств.<br>
+						Дизайнер, флорист, художник. <br>
+						Опыт преподавания - 4 года. (Академическая живопись, академический рисунок)
+					</div>
+				</div>
+				<div class="yana teacher">
+					<div class="name">Яна</div>
+					<div class="about-teacher">
+						Образование: МГХУ им. А.К.Глебова, Белорусский Государственный педагогический университет.<br>
+						Хужожник - иллюстратор.<br>
+						Опыт преподавания - 2 года. (Живопись, анатомия, цветоведение, иллюстрация).
+					</div>
+				</div>
+			</div>
 			</div>
 	</section>
 
