--- a/index.html
+++ b/index.html
@@ -419,9 +419,9 @@
 	<section class="find-us" id="particles-js">
 		<div class="container">
 			<h2>Контакты.</h2>
-			<p class='adress'>Студия "Акварель" находится по адресу г.Минск, ул. Матусевича 23,<br> в здании бывшего детского сада, 2 этаж, аудитория 208</p>
-			<div class="phone">	Звоните по телефону <a href="tel:+375296633164">+375 29 66-33-164</a> </div>
-			<a href="https://www.instagram.com/studiya.aquarelle/">Мы в Instagram</a>
+			<p class='adress'>  <strong>АДРЕС: </strong> г.Минск, ул. Матусевича 23, 208<br> (Здание бывшего детского сада, 2 этаж) </p>
+			<div class="phone">	<strong>Телефон: </strong> <a href="tel:+375296633164">+375 29 66-33-164</a> </div>
+			<a class="insta" href="https://www.instagram.com/studiya.aquarelle/">Мы в Instagram</a>
 			<div class="ways-to-studio">
 				<div class="way">
 					<h4>Дорога в студию от перекрёстка Матусевича - Глебки (за 1 минуту)</h4>
@@ -436,7 +436,9 @@
 					</div>
 				</div>
 			</div>
+			<div class="mob">Мы на карте.</div>
 		</div>
+		
 		<div class="for-map">
 			<iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A9c354da8ca4ab1b64cc9cbfc1cff337a1888f34b3e7934d41845cdf963edbabf&amp;source=constructor" width="100%" height="300px" frameborder="0"></iframe>
 		</div>
