teacher-switcher for mobile

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
 	 <section class="courses">
 	 	<div class="container">
-	 		<h2>Курсы рисования в Минске с ценами. Взрослые и подростковые группы, любой уровень подготовки.</h2>
+	 		<h1>Курсы рисования в Минске с ценами. Взрослые и подростковые группы, любой уровень подготовки.</h1>
 		
 			<div class="courses-list">
 
@@ -151,9 +151,9 @@
 						<img src="images/academ-risunok.jpg" alt="Курсы по академическому рисунку в Минске, подготовка к поступлению">
 					</div>
 					<div class="course-description">
-						<h3 class="course-header">
-							Академический рисунок для поступающих.
-						</h3>
+						<h2 class="course-header">
+							Курс "Академический рисунок для поступающих".
+						</h2>
 						<div class="course-about">
 							<p>Курсы подготовки к поступлению в ВУЗы, ССУЗы и ДХШ по дисциплине "Академический рисунок"</p>
 							<p>Подростковая группа (14-18 лет).</p>
@@ -169,9 +169,9 @@
 						<img src="images/academ-risunok-vzr.jpg" alt="Курсы по академическому рисунку по программе академии искусств">
 					</div>
 					<div class="course-description">
-						<h3 class="course-header">
-							Академический рисунок.
-						</h3>
+						<h2 class="course-header">
+							Курс "Академический рисунок".
+						</h2>
 						<div class="course-about">
 							<p>Занятия проходят по программе, максимально приближенной к программе Академии Искусств. В рамках курса Вы овладеете профессиональными навыками в рисунке.</p>
 							<p>Взрослая группа (от 18 лет)</p>
@@ -187,9 +187,9 @@
 						<img src="images/academ-jivopis.jpg" alt="Курсы по академичеcкой живописи в Минске. Подготовка к поступлению.">
 					</div>
 					<div class="course-description">
-						<h3 class="course-header">
-							Академическая живопись для поступающих.
-						</h3>
+						<h2 class="course-header">
+							Курс "Академическая живопись для поступающих".
+						</h2>
 						<div class="course-about">
 							<p>Специализированный курс подготовки к поступлению в ВУЗы, ССУЗы и ДХШ по дисциплине "Академическая живопись"</p>
 							<p>Подростковая группа (14-18 лет)</p>
@@ -205,9 +205,9 @@
 						<img src="images/academ-jivopis-vzr.jpg" alt="Курсы по академичеcкой живописи в Минске">
 					</div>
 					<div class="course-description">
-						<h3 class="course-header">
-							Академическая живопись.
-						</h3>
+						<h2 class="course-header">
+							Курс "Академическая живопись".
+						</h2>
 						<div class="course-about">
 							<p>Занятия проходят в соответствии с программой, максимально приближенной к программе Академии Искусств. В рамках курса Вы овладеете профессиональными техниками и навыками в живописи.</p>
 							<p>Взрослая группа (от 18 лет)</p>
@@ -223,9 +223,9 @@
 						<img src="images/sculpting.jpg" alt="Курсы по скульптуре. Подготовка к поступлению.">
 					</div>
 					<div class="course-description">
-						<h3 class="course-header">
-							Скульптура для поступающих.
-						</h3>
+						<h2 class="course-header">
+							Курс "Скульптура для поступающих".
+						</h2>
 						<div class="course-about">
 							<p>Специализированный курс подготовки к поступлению в ВУЗы, ССУЗы и ДХШ по дисциплине "Скульптура"</p>
 							<p>Подростковая группа (14-18 лет)</p>
@@ -241,9 +241,9 @@
 						<img src="images/sculpting-project.jpg" alt="Курсы по скульптуре. Индивидуальные занятия.">
 					</div>
 					<div class="course-description">
-						<h3 class="course-header">
-							Интерьерная скульптура. Индивидуальные занятия.
-						</h3>
+						<h2 class="course-header">
+							Курс "Интерьерная скульптура. Индивидуальные занятия".
+						</h2>
 						<div class="course-about">
 							<p>Курс по интерьерной скульптуре для любого уровня подготовки. Полное выполнение одного проекта от штрихов до отливки в материал (гипс). Стоимость материала включена в стоимость.</p>
 							<p>Взрослая группа (от 18 лет)</p>
@@ -259,9 +259,9 @@
 						<img src="images/anatomy.jpg" alt="Курсы по пластической анатомии в Минске.">
 					</div>
 					<div class="course-description">
-						<h3 class="course-header">
-							Пластическая анатомия для художников.
-						</h3>
+						<h2 class="course-header">
+							Курс "Пластическая анатомия для художников".
+						</h2>
 						<div class="course-about">
 							<p>Курс по изучению пластической анатомии, групп мышц, образующих рельеф и пластику тела. Без этих знаний невозможно грамотно изобразить человеческую натуру. Курс длится 2 месяца.</p>
 							<p>Взрослая группа (от 18 лет)</p>
@@ -277,9 +277,9 @@
 						<img src="images/coloristic.jpg" alt="Курсы по цветоведению и композиции в Минске.">
 					</div>
 					<div class="course-description">
-						<h3 class="course-header">
-							Цветоведение и композиция.
-						</h3>
+						<h2 class="course-header">
+							Курс "Цветоведение и композиция".
+						</h2>
 						<div class="course-about">
 							<p>Теория цвета, гармония цвета, психология цвета, основы композиции, виды композиции, практические занятия по закреплению теории. Курс длится 1,5 месяца.</p>
 							<p>Взрослые и подростки (от 14 лет)</p>
@@ -295,9 +295,9 @@
 						<img src="images/illustration.jpg" alt="Курсы по иллюстрации для начинающих в Минске.">
 					</div>
 					<div class="course-description">
-						<h3 class="course-header">
-							Иллюстрация для новичков.
-						</h3>
+						<h2 class="course-header">
+							Курс "Иллюстрация для новичков".
+						</h2>
 						<div class="course-about">
 							<p>Иллюстрация для начального уровня. </p>
 							<p>Взрослые и подростки (от 14 лет). Учимся визуализировать своими силами и попутно учимся рисовать.</p>
@@ -313,9 +313,9 @@
 						<img src="images/illustration-pro.jpg" alt="Курсы по иллюстрации для начинающих в Минске.">
 					</div>
 					<div class="course-description">
-						<h3 class="course-header">
-							Иллюстрация ПРОФИ.
-						</h3>
+						<h2 class="course-header">
+							Курс "Иллюстрация ПРОФИ".
+						</h2>
 						<div class="course-about">
 							<p>Иллюстрация для профессионалов. </p>
 							<p>Взрослые и подростки (от 14 лет). Учимся визуализировать своими силами и попутно учимся рисовать.</p>
@@ -350,7 +350,7 @@
 						Опыт преподавания - : 6 лет. (Рисунок, скульптура, анатомия)
 					</div>
 				</div>
-				<div class="nastya teacher active">
+				<div class="nastya teacher">
 					<div class="name">Настя</div>
 					<div class="about-teacher">
 						Образование: МГХУ им. А.К.Глебова, Белорусский Государстаенный Университет Культуры и Искусств.<br>
